KravDokumentFravær, oppretthold konsistens underveis